<resources>
    <string name="app_name">IRICF</string>
    <string name="enter_the_username">Enter the username</string>
    <string name="user_signin">User SignIn</string>
    <string name="create_rake">Create Rake</string>
    <string name="create_coach">Create Coach</string>
    <string name="commission_shed">Commission shed</string>
    <string name="enter_name">Enter your name</string>
    <string name="note_date_should_be_of_format_yyyy_mm_dd">NOTE: DATE SHOULD BE OF FORMAT : \nDD-MM-YYYY</string>
    <string name="line">Line No:</string>
    <string name="stage_no">Stage No:</string>
    <string name="enter_line_no_optional">Enter Line No. (Optional)</string>
    <string name="enter_stage_no_optional">Enter stage No. (Optional)</string>
    <string name="edit_position">EDIT POSITION</string>
    <string name="enter_coach_number">Enter coach number</string>
    <string name="signing_in">Signing In</string>
    <string name="loading">Loading…</string>
    <string name="update">Update</string>
    <string name="coaches">Coaches</string>
    <string name="production_line">Production Line</string>
    <string name="out_shed">Shop-32 OutShed</string>
    <string name="paint_shop">Paint Shop</string>
    <string name="dispatch_shed">Dispatch Shed</string>
    <string name="in_shells_rec">In Shells Received</string>
    <string name="click_here_for_read_access">Click here for read access</string>
    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
    <!--<string name="shell_received">shell_rec</string>-->
    <!--<string name="intake">intake</string>-->
    <!--<string name="agency">agency</string>-->
    <!--<string name="conduit">conduit</string>-->
    <!--<string name="coupler">coupler</string>-->
    <!--<string name="ew_panel">ew_panel</string>-->
    <!--<string name="roof_tray">roof_tray</string>-->
    <!--<string name="ht_tray">ht_tray</string>-->
    <!--<string name="ht_equip">ht_equip</string>-->
    <!--<string name="high_dip">high_dip</string>-->
    <!--<string name="uf_tray">uf_tray</string>-->
    <!--<string name="uf_trans">uf_trans</string>-->
    <!--<string name="uf_wire">uf_wire</string>-->
    <!--<string name="off_roof">off_roof</string>-->
    <!--<string name="roof_clear">roof_clear</string>-->
    <!--<string name="xx">off_ew</string>-->
    <!--<string name="xx">ew_clear</string>-->
    <!--<string name="xx">mech_pan</string>-->
    <!--<string name="xx">off_tf</string>-->
    <!--<string name="xx">tf_clear</string>-->
    <!--<string name="xx">tf_prov</string>-->
    <!--<string name="xx">lf_load</string>-->
    <!--<string name="xx">off_pow</string>-->
    <!--<string name="xx">power_hv</string>-->
    <!--<string name="xx">off_dip</string>-->
    <!--<string name="xx">dip_clear</string>-->
    <!--<string name="xx">lower</string>-->
    <!--<string name="xx">off_cont</string>-->
    <!--<string name="xx">cont_hv</string>-->
    <!--<string name="xx">load_test</string>-->
    <!--<string name="xx">rmvu</string>-->
    <!--<string name="xx">panto</string>-->
    <!--<string name="xx">pcp_clear</string>-->
    <!--<string name="xx">bu_form</string>-->
    <!--<string name="xx">rake_form</string>-->
    <!--<string name="xx">remarks</string>-->
</resources>
